@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Main {
{static} main(args:String[])
}

package java.util {
class Random
class ArrayList
}

class PointOfSale {
'- idLastSale : int
- randomIdSaleGenerator : Random
+ makeNewSale() : int
+ addLineItemToSale(idSale : int, \n\tproductName : String,\n\tquantity : int)
+ printBillOfSale(saleId : int)
+ payOneSale(saleId : int, \n\thandedAmount : double) : double
+ printChangeOfSale(saleId : int)
- fillCatalog()
- searchSaleById(int id) : Sale
}

class ProductCatalog {
+ addProductSpecification(name : String, \n\tprice : double)
+ searchByName(name : String) : \n\tProductSpecification
}

class ProductSpecification {
- price : double
- name : String
}

class Sale {
- id : int
+ addLineItem(prodSpec : \n\tProductSpecification, \n\tquantity : int)
+ total() : double
+ printBill()
+ pay(amount : double) : double
+ printChange()
}

class PaymentInCash {
- amount : double
+ change(totalSale : double) : double
}

class SaleLineItem {
- quantity : int
+ subtotal() : double
+ print()
}

PointOfSale o--> "*" Sale : sales
Sale *--> "*" SaleLineItem : saleLineItems
SaleLineItem --> "1" ProductSpecification : productSpecification
PointOfSale --> "1" ProductCatalog
ProductCatalog o--> "*" ProductSpecification : productSpecifications
Sale -> "1" PaymentInCash
@enduml